frontend/src/styles/HeroSection.css
.hero-container {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 100px;
  margin-bottom: 100px;
}

.hero-inner {
  position: relative;
  width: 90%;
  max-width: 1400px;
  border-radius: 30px;
  overflow: hidden;
  box-shadow: 0 0 100px 0px var(--capsule-bg);
}

.hero-image {
  width: 100%;
  height: auto;
  display: block;
}

.hero-text-left {
  position: absolute;
  top: 60px;
  left: 60px;
  color: white;
  font-size: 36px;
  font-weight: 700;
  text-shadow: 0 3px 10px rgba(0,0,0,0.6);
}

.hero-text-right {
  position: absolute;
  top: 400px;
  right: 60px;
  color: white;
  font-size: 30px;
  font-weight: 700;
  text-align: right;
  text-shadow: 0 3px 10px rgba(0,0,0,0.6);
}

.hero-button {
  position: absolute;
  right: 60px;
  bottom: 40px;
  background: var(--capsule-bg);
  padding: 18px 40px;
  border-radius: 40px;
  font-size: 20px;
  font-weight: 700;
  transition: 0.5s ease;
}

.hero-button:hover {
  transform: scale(1.05);
  filter: brightness(1.2);
}


.hero-mobile-overlay {
  display: none;
}

/* Mobil layout */
@media (max-width: 900px) {

  
  .hero-text-left,
  .hero-text-right,
  .hero-button {
    display: none !important;
  }

  
  .hero-image {
    height: 460px !important;
    object-fit: cover;
    
  }

  
  .hero-mobile-overlay {
    display: flex !important;
    flex-direction: column;
    justify-content: flex-end;        
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;                     
    padding: 35px 20px 30px 20px;     
    text-align: center;
    color: white;
    text-shadow: 0 3px 10px rgba(0,0,0,0.6);
  }

  
  .hero-mobile-overlay h1 {
    font-size: 26px;
    line-height: 1.25;
    margin-bottom: 150px;              
    font-weight: 700;
  }

 
  .hero-mobile-overlay h2 {
    font-size: 17px;
    line-height: 1.35;
    opacity: 0.95;
    margin-bottom: 160px;             
    font-weight: 600;
  }

  .hero-mobile-button {
  position: absolute;
  bottom: 20px;
  right: 20px;
  background: var(--capsule-bg);
  padding: 12px 22px;
  border-radius: 40px;
  font-size: 16px;
  font-weight: 700;
  text-decoration: none;
  color: white;
}

}

